--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -21,11 +21,15 @@
     "electron": "^36.4.0"
   },
   "dependencies": {
+    "@fontsource/lobster": "^5.2.6",
     "@tailwindcss/vite": "^4.1.10",
     "autoprefixer": "^10.4.21",
+    "classnames": "^2.5.1",
+    "lobster": "^0.1.0",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.10"
+    "react-icons": "^5.5.0",
+    "typeface-lobster": "^1.1.13"
   }
 }
