--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.5.2",
+    "concurrently": "^9.1.2",
     "electron": "^36.4.0"
   },
   "dependencies": {
