--- a/src/api/package.json
+++ b/src/api/package.json
@@ -11,11 +11,12 @@
   "license": "ISC",
   "packageManager": "pnpm@10.12.1",
   "dependencies": {
-    "express": "^5.1.0",
-    "prisma": "^6.9.0"
+    "@prisma/client": "^6.10.1",
+    "express": "^5.1.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "prisma": "^6.10.1",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   }
