--- a/src/api/tsconfig.json
+++ b/src/api/tsconfig.json
@@ -1,7 +1,11 @@
 {
+    "extends": "../../tsconfig.json",
     "compilerOptions": {
         "baseUrl": "src",
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "paths": {
+            "@shared/*": ["../../shared/*"],
+        }
     },
     "include": ["src"]
 }
