--- a/src/api/package.json
+++ b/src/api/package.json
@@ -1,9 +1,9 @@
 {
   "name": "api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "main.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite"
   },
   "keywords": [],
   "author": "",
@@ -16,8 +16,11 @@
   "devDependencies": {
     "@types/express": "^5.0.3",
     "prisma": "^6.10.1",
+    "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vite": "^6.3.5",
+    "vite-plugin-node": "^5.0.1"
   },
   "description": ""
 }
