--- a/src/api/tsconfig.json
+++ b/src/api/tsconfig.json
@@ -1,10 +1,11 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "baseUrl": "src",
+        "baseUrl": "./src",
         "esModuleInterop": true,
         "paths": {
             "@shared/*": ["../../shared/*"],
+            "@/*": ["./src/*"]
         }
     },
     "include": ["src"]
