--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@fontsource/lobster": "^5.2.6",
     "@tailwindcss/vite": "^4.1.10",
+    "@tanstack/react-query": "^5.80.10",
     "autoprefixer": "^10.4.21",
     "axios": "^1.10.0",
     "classnames": "^2.5.1",
