--- a/src/api/package.json
+++ b/src/api/package.json
@@ -11,9 +11,11 @@
   "packageManager": "pnpm@10.12.1",
   "dependencies": {
     "@prisma/client": "^6.10.1",
+    "cors": "^2.8.5",
     "express": "^5.1.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "prisma": "^6.10.1",
     "ts-node": "^10.9.2",
