--- a/src/ui/tsconfig.json
+++ b/src/ui/tsconfig.json
@@ -25,7 +25,8 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "paths": {
-      "@shared/*": ["../../shared/*"]
+      "@shared/*": ["../../shared/*"],
+      "@api/*": ["../../api/src/*"],
     }
   },
   "include": [
