--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev:ui": "pnpm --filter ./src/ui dev",
     "dev:api": "cd src/api && npm run dev",
-    "dev:electron": "cd src/ui && electron --gtk-version=3 .",
+    "dev:electron": "cd src/ui && wait-on http://localhost:5173 && electron --gtk-version=3 .",
     "dev": "concurrently \"pnpm dev:ui\" \"pnpm dev:api\"",
     "dev:app": "concurrently \"pnpm dev:ui\" \"pnpm dev:electron\" \"pnpm dev:api\""
   },
@@ -19,6 +19,7 @@
     "concurrently": "^9.1.2",
     "electron": "^36.4.0",
     "tsx": "^4.20.3",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "wait-on": "^8.0.3"
   }
 }
