--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -26,13 +26,14 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.5.2",
-    "concurrently": "^9.1.2",
-    "electron": "^36.5.0",
-    "storybook": "^9.0.15",
-    "vitest": "^3.2.4",
     "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
+    "concurrently": "^9.1.2",
+    "daisyui": "^5.0.46",
+    "electron": "^36.5.0",
     "playwright": "^1.53.2",
-    "@vitest/coverage-v8": "^3.2.4"
+    "storybook": "^9.0.15",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "@fontsource/lobster": "^5.2.6",
