--- a/src/api/package.json
+++ b/src/api/package.json
@@ -11,6 +11,7 @@
   "packageManager": "pnpm@10.12.1",
   "dependencies": {
     "@prisma/client": "^6.10.1",
+    "axios": "^1.10.0",
     "cors": "^2.8.5",
     "express": "^5.1.0"
   },
