--- a/src/api/package.json
+++ b/src/api/package.json
@@ -4,7 +4,7 @@
   "main": "main.ts",
   "type": "commonjs",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host 127.0.1",
     "build": "vite build",
     "start": "node dist/main.js"
   },
