--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev:ui": "pnpm --filter ./src/ui dev",
     "dev:api": "cd src/api && npm run dev",
-    "dev:electron": "cd src/ui && wait-on http://localhost:5173 && electron --gtk-version=3 .",
+    "dev:electron": "cd src/electron && wait-on http://localhost:5173 && npm run dev",
     "dev": "concurrently \"pnpm dev:ui\" \"pnpm dev:api\"",
     "dev:app": "concurrently \"pnpm dev:ui\" \"pnpm dev:electron\" \"pnpm dev:api\""
   },
