--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -2,42 +2,24 @@
   "name": "ui",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/electron.js",
+  "main": "./src/main.tsx",
   "scripts": {
-    "electron": "electron --gtk-version=3 .",
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "all": "concurrently \"pnpm dev\" \"pnpm electron\"",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "dev": "vite --host 127.0.1"
   },
   "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@chromatic-com/storybook": "^4.0.1",
-    "@storybook/addon-a11y": "^9.0.15",
-    "@storybook/addon-docs": "^9.0.15",
-    "@storybook/addon-onboarding": "^9.0.15",
-    "@storybook/addon-vitest": "^9.0.15",
-    "@storybook/react-vite": "^9.0.15",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react": "^4.5.2",
-    "@vitest/browser": "^3.2.4",
-    "@vitest/coverage-v8": "^3.2.4",
-    "concurrently": "^9.1.2",
-    "electron": "^36.5.0",
-    "playwright": "^1.53.2",
-    "vitest": "^3.2.4"
+    "@vitejs/plugin-react": "4.6.0"
   },
   "dependencies": {
     "@fontsource/lobster": "^5.2.6",
     "@fontsource/roboto": "^5.2.6",
-    "@tailwindcss/vite": "^4.1.10",
-    "@tanstack/react-query": "^5.80.10",
+    "@tailwindcss/vite": "4.1.11",
+    "@tanstack/react-query": "5.83.0",
     "autoprefixer": "^10.4.21",
     "axios": "^1.10.0",
     "classnames": "^2.5.1",
