--- a/src/api/package.json
+++ b/src/api/package.json
@@ -4,7 +4,7 @@
   "main": "main.ts",
   "type": "commonjs",
   "scripts": {
-    "dev": "vite --host 127.0.1"
+    "dev": "vite --host"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,7 @@
     "@prisma/client": "6.11.1",
     "axios": "^1.10.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
     "express": "^5.1.0"
   },
   "devDependencies": {
