fix(script): docker compose commands (i was sleepy) and added no sandbox since it's just a dev enviroment anyway

--- a/src/electron/package.json
+++ b/src/electron/package.json
@@ -2,7 +2,7 @@
   "main": "electron.js",
   "type": "module",
   "scripts": {
-    "dev": "wait-on http://localhost:5173 && electron --gtk-version=3 ."
+    "dev": "wait-on http://localhost:5173 && electron --gtk-version=3 --no-sandbox ."
   },
   "keywords": [],
   "author": "",
