chore(all): minor changes

--- a/src/electron/package.json
+++ b/src/electron/package.json
@@ -2,7 +2,8 @@
   "main": "electron.js",
   "type": "module",
   "scripts": {
-    "dev": "wait-on http://localhost:5173 && electron --gtk-version=3 --no-sandbox ."
+    "dev": "wait-on http://localhost:5173 && electron --gtk-version=3 .",
+    "no-sandbox": "wait-on http://localhost:5173 && electron --gtk-version=3 --no-sandbox ."
   },
   "keywords": [],
   "author": "",
