--- a/src/api/Dockerfile
+++ b/src/api/Dockerfile
@@ -1,5 +1,5 @@
 # Node version
-FROM node:22
+FROM node:22-alpine AS builder
 
 # Set the working directory
 WORKDIR /app
@@ -17,6 +17,11 @@ COPY src/api ./api
 # Copy the shared folder for types
 COPY src/shared ./shared
 
+FROM node:22-alpine
+
+WORKDIR /app
+COPY --from=builder /app .
+
 # Change to the api directory
 WORKDIR /app/api
 
@@ -24,7 +29,7 @@ WORKDIR /app/api
 RUN npx prisma generate
 
 # Port 3000 ig
-EXPOSE 3000
+EXPOSE 2999
 
 # Start the application
 CMD ["npm", "run", "dev"]
