--- a/src/ui/Dockerfile
+++ b/src/ui/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:22
+FROM node:22-alpine AS builder
 WORKDIR /app
 
 COPY src/ui/package.json ./ui/package.json
@@ -9,6 +9,12 @@ RUN cd ui && npm install
 COPY src/ui ./ui
 COPY src/shared ./shared
 
+FROM node:22-alpine
+
+WORKDIR /app
+
+COPY --from=builder /app .
+
 WORKDIR /app/ui
-EXPOSE 5173
+EXPOSE 5172
 CMD ["npm", "run", "dev"]
