--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -25,7 +25,9 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "typeface-lobster": "^1.1.13",
-    "react-router-dom": "7.6.3"
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "7.6.3",
+    "remark-gfm": "^4.0.1",
+    "typeface-lobster": "^1.1.13"
   }
 }
