--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "concurrently": "^9.1.2"
   },
   "dependencies": {
-    "@uiw/react-md-editor": "^4.0.7"
+    "@uiw/react-md-editor": "^4.0.7",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0"
   }
 }
