--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -1,7 +1,7 @@
 {
   "main": "./src/main.tsx",
   "scripts": {
-    "dev": "vite --host"
+    "dev": "vite"
   },
   "type": "module",
   "keywords": [],
