--- a/src/api/package.json
+++ b/src/api/package.json
@@ -4,7 +4,7 @@
   "main": "main.ts",
   "type": "commonjs",
   "scripts": {
-    "dev": "vite"
+    "dev": "tsx --watch src/main.ts"
   },
   "keywords": [],
   "author": "",
@@ -23,9 +23,7 @@
     "prisma": "^6.11.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
-    "typescript": "^5.8.3",
-    "vite": "7.0.4",
-    "vite-plugin-node": "7.0.0"
+    "typescript": "^5.8.3"
   },
   "description": ""
 }
