--- a/src/api/tsconfig.json
+++ b/src/api/tsconfig.json
@@ -1,17 +1,53 @@
 {
     "compilerOptions": {
-        "baseUrl": "./src",
+        "target": "ES2022",
+        "lib": [
+            "ES2022"
+        ],
+        "module": "ESNext",
+        "moduleResolution": "node",
         "esModuleInterop": true,
+        "strict": true,
+        "skipLibCheck": true,
+        "forceConsistentCasingInFileNames": true,
+        "resolveJsonModule": true,
+        "baseUrl": "./src",
         "paths": {
+            "controllers/*": [
+                "./controllers/*"
+            ],
+            "routes/*": [
+                "./routes/*"
+            ],
+            "db/*": [
+                "./db/*"
+            ],
+            "generated/*": [
+                "./generated/*"
+            ],
+            "utils/*": [
+                "./utils/*"
+            ],
+            "adapters/*": [
+                "./adapters/*"
+            ],
+            "3rdparty/*": [
+                "./3rdparty/*"
+            ],
             "@shared/*": [
                 "../../shared/*"
-            ],
-            "@/*": [
-                "./src/*"
             ]
         }
     },
     "include": [
-        "src"
-    ]
+        "src/**/*",
+        "../shared/**/*"
+    ],
+    "exclude": [
+        "node_modules",
+        "dist"
+    ],
+    "ts-node": {
+        "esm": true
+    }
 }
