--- a/src/api/tsconfig.json
+++ b/src/api/tsconfig.json
@@ -12,6 +12,7 @@
         "forceConsistentCasingInFileNames": true,
         "resolveJsonModule": true,
         "baseUrl": "./src",
+		"outDir": "./dist",
         "paths": {
             "controllers/*": [
                 "./controllers/*"
