--- a/.gitignore
+++ b/.gitignore
@@ -147,14 +147,8 @@ TODO.txt
 # Prisma generated files
 src/api/src/generated/
 
-# Scripttts
-run-dev.sh
-
-# Docker stuff (so far)
-Dockerfile*
-docker-compose*.yml
-build-docker.sh
-.dockerignore
+# Build
+src/api/build/
 
 # Formatting
 .prettier*
