--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -1,7 +1,10 @@
 {
   "main": "./src/main.tsx",
   "scripts": {
-    "dev": "vite"
+    "dev": "vite",
+	"build": "vite build",
+	"preview": "vite preview",
+	"dist": ""
   },
   "type": "module",
   "keywords": [],
