--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "dev": "concurrently \"npm run dev:ui\" \"npm run dev:electron\" \"npm run dev:api\"",
     "dev:no-sandbox": "concurrently \"npm run dev:ui\" \"npm run dev:electron:no-sandbox\" \"npm run dev:api\"",
 	"normal": "cd src/electron && npm run normal",
-	"build:api": "cd src/api && npm run build:exe",
-	"build:ui": "cd src/ui && npm run build"
+	"build:api": "cd src/api && npm run build",
+	"build:ui": "cd src/ui && npm run build",
+	"clean:api": "cd src/api && npm run clean",
+	"clean:ui": "cd src/ui && npm run clean"
   },
   "keywords": [],
   "author": "",
