--- a/src/api/package.json
+++ b/src/api/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "tsx --import=tsconfig-paths/register --watch src/main.ts",
-    "build": "bun build src/main.ts --outdir dist --target node --format esm",
-    "clean": "rm -rf dist"
+    "build": "bun build src/main.ts --outdir api-dist --target node --format esm",
+    "clean": "rm -rf api-dist"
   },
   "keywords": [],
   "author": "",
@@ -23,11 +23,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "prisma": "^6.11.1",
-    "ts-node": "^10.9.2",
-    "tsc-alias": "^1.8.16",
-    "tsconfig-paths": "^4.2.0",
-    "tsx": "^4.20.3",
-    "typescript": "^5.8.3"
+    "tsx": "^4.20.3"
   },
   "description": ""
 }
