--- a/src/electron/package.json
+++ b/src/electron/package.json
@@ -1,31 +1,37 @@
 {
-  "main": "electron.js",
-  "type": "module",
-  "scripts": {
-    "dev": "wait-on http://localhost:5173 && electron --gtk-version=3 .",
-    "dev:no-sandbox": "wait-on http://localhost:5173 && electron --gtk-version=3 --no-sandbox .",
-	"normal": "electron --gtk-version=3 .",
-	"make": "electron-forge make",
-    "publish": "electron-forge publish",
-    "start": "electron-forge start",
-    "package": "electron-forge package"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "electron": "^37.2.1",
-    "wait-on": "8.0.3"
-  },
-  "devDependencies": {
-    "@electron-forge/cli": "^7.8.3"
-  },
-  "config": {
-	"forge": {
-		"packagerConfig": {
-			"name": "Media App",
-			"executableName": "media-app"
+	"main": "electron.js",
+	"type": "module",
+	"version": "1.0.0",
+	"description": "Bottom Text",
+	"scripts": {
+		"dev": "wait-on http://localhost:5173 && electron --gtk-version=3 .",
+		"dev:no-sandbox": "wait-on http://localhost:5173 && electron --gtk-version=3 --no-sandbox .",
+		"normal": "electron --gtk-version=3 .",
+		"package": "electron-forge package"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"electron": "^37.2.1"
+	},
+	"devDependencies": {
+		"electron": "^37.2.1",
+		"wait-on": "8.0.3",
+		"@electron-forge/cli": "^7.8.3"
+	},
+	"config": {
+		"forge": {
+			"Description": "Media App",
+			"packagerConfig": {
+				"name": "media-app",
+				"executableName": "media-app",
+				"extraResource": [
+					"../ui/ui-dist",
+					"../api/api-dist",
+					"../api/prisma"
+				]
+			}
 		}
 	}
-  }
 }
