--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -2,9 +2,10 @@
   "main": "./src/main.tsx",
   "scripts": {
     "dev": "vite",
-	"build": "vite build",
+	"build": "vite build --outDir ui-dist",
 	"preview": "vite preview",
-	"dist": ""
+	"dist": "",
+	"clean": "rm -rf ui-dist"
   },
   "type": "module",
   "keywords": [],
