--- a/src/api/package.json
+++ b/src/api/package.json
@@ -23,6 +23,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "prisma": "^6.11.1",
+    "tsconfig-paths": "^4.2.0",
     "tsx": "^4.20.3"
   },
   "description": ""
