--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
   "packageManager": "pnpm@10.12.1",
   "devDependencies": {
     "concurrently": "^9.1.2",
-    "prettier": "^3.6.2",
-    "save": "^2.9.0"
+    "prettier": "^3.6.2"
   }
 }
