--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -25,7 +25,6 @@
     "autoprefixer": "^10.4.21",
     "axios": "^1.10.0",
     "classnames": "^2.5.1",
-    "lobster": "^0.1.0",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -34,7 +33,6 @@
     "react-router-dom": "7.6.3",
     "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
-    "remark-math": "^6.0.0",
-    "typeface-lobster": "^1.1.13"
+    "remark-math": "^6.0.0"
   }
 }
