--- a/src/api/package.json
+++ b/src/api/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@prisma/client": "6.11.1",
     "axios": "^1.10.0",
+    "bun": "^1.2.21",
     "cors": "^2.8.5",
     "express": "^5.1.0"
   },
